perf: 优化启动脚本